why us section completed

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </nav>
 </header>
 <main>
-    <section class="">
+    <section class="pb-8">
         <div class="glide banner_glide">
             <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides">
@@ -146,6 +146,53 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+        </div>
+    </section>
+    <section class="pb-8">
+        <div class="container">
+            <div class="row items-center">
+                <div class="w-full lg:w-1/2">
+                    <div class="pb-5">
+                        <div class="small_title">
+                            Niyə biz
+                        </div>
+                        <h4 class="section_title pb-6">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </h4>
+                        <p class="relative pl-5 text-sm leading-7 text-[#303030] before_line">
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                            type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+                            electronic typesetting, remaining essentially unchanged.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full lg:w-1/2">
+                    <div class="w-full">
+                        <img src="./assets/images/about/why_us.png" class="w-full" alt="">
+                    </div>
+                </div>
+                <div class="w-full">
+                    <div class="relative bg_section">
+                        <div class="overlay"></div>
+                        <div class="relative z-10 container">
+                            <ul class="flex items-center justify-around">
+                                <li class="text-white">
+                                    <p class="text-5xl font-medium">200+</p>
+                                    <p class="text-xl">Məmnun müştəri</p>
+                                </li>
+                                <li class="text-white">
+                                    <p class="text-5xl font-medium">50+</p>
+                                    <p class="text-xl">Avadanlıq</p>
+                                </li>
+                                <li class="text-white">
+                                    <p class="text-5xl font-medium">100%</p>
+                                    <p class="text-xl">Zəmanət</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
