home services added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/output.css">
 </head>
 <body>
+<!-- Navbar start-->
 <header>
     <div class="bg-[#1E1E1E] py-3">
         <div class="container">
@@ -124,7 +125,9 @@
         </div>
     </nav>
 </header>
+<!-- Navbar end -->
 <main>
+    <!-- Main slide start -->
     <section class="pb-8">
         <div class="glide banner_glide">
             <div class="glide__track" data-glide-el="track">
@@ -149,6 +152,9 @@
             </div>
         </div>
     </section>
+    <!-- Main slide end -->
+
+    <!-- Why us start -->
     <section class="pb-8">
         <div class="container">
             <div class="row items-center">
@@ -196,6 +202,97 @@
             </div>
         </div>
     </section>
+    <!-- Why us end -->
+
+    <!-- Services start -->
+    <section class="pb-8">
+        <div class="container">
+            <div class="pb-5 text-center">
+                <h4 class="relative inline-block mx-auto section_title after text-center">
+                    Xidmətlər
+                </h4>
+            </div>
+            <div class="glide services_glide">
+                <div class="glide__track" data-glide-el="track">
+                    <ul class="glide__slides py-5">
+                        <li class="glide__slide even:mt-9">
+                            <div class="service_card">
+                                <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
+                                    <img src="./assets/images/icons/service_1.svg" alt="">
+                                </div>
+                                <div class="my-5">
+                                    <div class="relative small_title black after pt-16">
+                                        liferats
+                                    </div>
+                                    <p class="text-xs leading-[20px] pt-4">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                                        standard dummy text ever since the 1500s.
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="glide__slide md:even:mt-9">
+                            <div class="service_card">
+                                <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
+                                    <img src="./assets/images/icons/service_2.svg" alt="">
+                                </div>
+                                <div class="my-5">
+                                    <div class="relative small_title black after pt-16">
+                                        Personal protective equipments
+                                    </div>
+                                    <p class="text-xs leading-[20px] pt-4">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                                        standard dummy text ever since the 1500s.
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="glide__slide md:even:mt-9">
+                            <div class="service_card">
+                                <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
+                                    <img src="./assets/images/icons/service_3.svg" alt="">
+                                </div>
+                                <div class="my-5">
+                                    <div class="relative small_title black after pt-16">
+                                        Marine Fire
+                                    </div>
+                                    <p class="text-xs leading-[20px] pt-4">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                                        standard dummy text ever since the 1500s.
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="glide__slide md:even:mt-9">
+                            <div class="service_card">
+                                <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
+                                    <img src="./assets/images/icons/service_4.svg" alt="">
+                                </div>
+                                <div class="my-5">
+                                    <div class="relative small_title black after pt-16">
+                                        Boats&Davits
+                                    </div>
+                                    <p class="text-xs leading-[20px] pt-4">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                                        standard dummy text ever since the 1500s.
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="flex items-center justify-end gap-4" data-glide-el="controls">
+                    <button class="w-10 h-10 border border-[#D8DBF6] text-[#F58220] rounded-full" data-glide-dir="<<">
+                        <span class="text-3xl mdi mdi-chevron-left"></span>
+                    </button>
+                    <button class="w-10 h-10 border border-[#D8DBF6] text-[#F58220] rounded-full" data-glide-dir=">>">
+                        <span class="text-3xl mdi mdi-chevron-right"></span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Services end -->
 </main>
 <!--Alpine js-->
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
