--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <!-- Custom css -->
     <link rel="stylesheet" href="assets/css/output.css">
 </head>
-<body>
+<body class="overflow-x-hidden">
 <!-- Navbar start-->
-<header>
+<header class="relative" x-data="{ nav: false }">
     <div class="bg-[#1E1E1E] py-3">
         <div class="container">
             <div class="flex items-center justify-end">
@@ -71,7 +71,7 @@
                 <a href="./index.html">
                     <img src="./assets/images/logo.png" class="max-w-[70px]" alt="Azsafety">
                 </a>
-                <ul class="hidden lg:flex items-center gap-5">
+                <ul class="navbar" x-bind:class="nav ? 'translate-x-0' : 'translate-x-full'">
                     <li class="hover_element">
                         <a href="./about.html">
                             Haqqımızda
@@ -121,6 +121,9 @@
                         </ul>
                     </li>
                 </ul>
+                <button class="block lg:hidden text-3xl" @click="nav = !nav">
+                    <span class="mdi" x-bind:class="nav ? 'mdi-close' : 'mdi-menu'"></span>
+                </button>
             </div>
         </div>
     </nav>
@@ -134,11 +137,11 @@
                 <ul class="glide__slides">
                     <li class="glide__slide" data-bg="./assets/images/banner/banner.png">
                         <div class="overlay"></div>
-                        <div class="w-3/4 text-center text-white">
-                            <h3 class="text-4xl">
+                        <div class="md:w-3/4 text-center text-white">
+                            <h3 class="text-2xl md:text-4xl">
                                 The standard Lorem Ipsum passage
                             </h3>
-                            <p class="text-lg font-light py-10">
+                            <p class="text-base md:text-lg font-light py-10">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -158,7 +161,7 @@
     <section class="pb-8">
         <div class="container">
             <div class="row items-center">
-                <div class="w-full lg:w-1/2">
+                <div class="w-full md:w-1/2">
                     <div class="pb-5">
                         <div class="small_title">
                             Niyə biz
@@ -173,7 +176,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full lg:w-1/2">
+                <div class="w-full md:w-1/2">
                     <div class="w-full">
                         <img src="./assets/images/about/why_us.png" class="w-full" alt="">
                     </div>
@@ -184,16 +187,16 @@
                         <div class="relative z-10 container">
                             <ul class="flex items-center justify-around">
                                 <li class="text-white">
-                                    <p class="text-5xl font-medium">200+</p>
-                                    <p class="text-xl">Məmnun müştəri</p>
+                                    <p class="text-2xl md:text-4xl lg:text-5xl font-medium">200+</p>
+                                    <p class="text-sm lg:text-xl">Məmnun müştəri</p>
                                 </li>
                                 <li class="text-white">
-                                    <p class="text-5xl font-medium">50+</p>
-                                    <p class="text-xl">Avadanlıq</p>
+                                    <p class="text-2xl md:text-4xl lg:text-5xl font-medium">50+</p>
+                                    <p class="text-sm lg:text-xl">Avadanlıq</p>
                                 </li>
                                 <li class="text-white">
-                                    <p class="text-5xl font-medium">100%</p>
-                                    <p class="text-xl">Zəmanət</p>
+                                    <p class="text-2xl md:text-4xl lg:text-5xl font-medium">100%</p>
+                                    <p class="text-sm lg:text-xl">Zəmanət</p>
                                 </li>
                             </ul>
                         </div>
@@ -390,15 +393,59 @@
             <div class="glide products_glide">
                 <div class="glide__track pb-12" data-glide-el="track">
                     <ul class="glide__slides py-5">
-                        <li class="glide__slide px-4">
-                            <div class="product_card">
+                        <li class="glide__slide px-2">
+                            <div class="product_card group">
                                 <div class="max-w-[182px] mx-auto py-3">
                                     <a href="./product.html" class="block w-full">
-                                        <img src="./assets/images/products/product.png" class="w-full" alt="">
+                                        <img src="./assets/images/products/product.png"
+                                             class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                             alt="">
                                     </a>
                                 </div>
-                                <a href="./product.html" class="text-lg text-center font-medium">
+                                <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
                                     SOLAS Inflatable Lifejacket-Child
+                                </a>
+                            </div>
+                        </li>
+                        <li class="glide__slide px-2">
+                            <div class="product_card group">
+                                <div class="max-w-[182px] mx-auto py-3">
+                                    <a href="./product.html" class="block w-full">
+                                        <img src="./assets/images/products/product_1.png"
+                                             class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                             alt="">
+                                    </a>
+                                </div>
+                                <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
+                                    SOLAS Inflatable Lifejacket - Child
+                                </a>
+                            </div>
+                        </li>
+                        <li class="glide__slide px-2">
+                            <div class="product_card group">
+                                <div class="max-w-[182px] mx-auto py-3">
+                                    <a href="./product.html" class="block w-full">
+                                        <img src="./assets/images/products/product_2.png"
+                                             class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                             alt="">
+                                    </a>
+                                </div>
+                                <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
+                                    SOLAS Inflatable Lifejacket - Child
+                                </a>
+                            </div>
+                        </li>
+                        <li class="glide__slide px-2">
+                            <div class="product_card group">
+                                <div class="max-w-[182px] mx-auto py-3">
+                                    <a href="./product.html" class="block w-full">
+                                        <img src="./assets/images/products/product_3.png"
+                                             class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                             alt="">
+                                    </a>
+                                </div>
+                                <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
+                                    SOLAS Inflatable Lifejacket - Child
                                 </a>
                             </div>
                         </li>
@@ -414,6 +461,112 @@
     </section>
     <!-- Products end -->
 </main>
+
+<footer>
+    <div class="bg-[#F0F3F6] px-4 pt-11">
+        <div class="container">
+            <div class="border-b-2 border-[#ACB1C4] pb-8">
+                <div class="row">
+                    <div class="w-full md:w-1/3 lg:w-1/4">
+                        <ul class="footer_widget">
+                            <li>
+                                <a href="./about.html">
+                                    Haqqımızda
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Qaydalar
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="w-full md:w-1/3 lg:w-1/4">
+                        <ul class="footer_widget">
+                            <li>
+                                <a href="#">
+                                    İstifadəçi şərtləri
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Məxfilik siyasəti
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="w-full md:w-1/3 lg:w-1/4">
+                        <ul class="footer_widget">
+                            <li>
+                                <a href="#">
+                                    Çatdırılma şərtləri
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    FAQ
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="w-full md:w-1/3 lg:w-1/4">
+                        <ul class="footer_widget">
+                            <li>
+                                <a href="tel:0504567890">
+                                    (050) 456 78 90
+                                </a>
+                            </li>
+                            <li>
+                                <a href="mailto:info@azsafety.az">
+                                    info@azsafety.az
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="py-8">
+                <div class="row">
+                    <div class="w-full md:w-1/2">
+                        <span class="text-[#ACB1C4]">
+                            &copy; 2023 Bütün hüquqlar qorunur.
+                        </span>
+                    </div>
+                    <div class="w-full md:w-1/2">
+                        <ul class="flex items-center md:justify-end mt-3 md:mt-0 text-xl text-[#F58220] gap-2">
+                            <li>
+                                <a href="#">
+                                    <span class="mdi mdi-facebook"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span class="mdi mdi-linkedin"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span class="mdi mdi-twitter"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span class="mdi mdi-instagram"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span class="mdi mdi-youtube"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
 <!--Alpine js-->
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 <!--Glide js-->
