--- a/index.html
+++ b/index.html
@@ -169,11 +169,13 @@
                         <h4 class="section_title pb-6">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         </h4>
-                        <p class="relative pl-5 text-sm leading-7 text-[#303030] before_line">
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                            type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-                            electronic typesetting, remaining essentially unchanged.
-                        </p>
+                        <div class="relative pl-5 inner_text before_line">
+                            <p>
+                                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                                type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+                                electronic typesetting, remaining essentially unchanged.
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div class="w-full md:w-1/2">
@@ -462,6 +464,7 @@
     <!-- Products end -->
 </main>
 
+<!-- Footer start -->
 <footer>
     <div class="bg-[#F0F3F6] px-4 pt-11">
         <div class="container">
@@ -566,6 +569,7 @@
         </div>
     </div>
 </footer>
+<!-- Footer end -->
 
 <!--Alpine js-->
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
