--- a/products.html
+++ b/products.html
@@ -1,9 +1,8 @@
-<!doctype html>
 <html lang="az">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Azsafety | About us</title>
+    <title>Azsafety | Products</title>
     <!-- Poppins font-family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -144,97 +143,13 @@
                     <span class="mdi mdi-chevron-right"></span>
                 </li>
                 <li>
-                    Haqqımızda
+                    Services
                 </li>
             </ul>
         </div>
     </div>
     <!-- Breadcrumb end -->
-
-    <!-- Why us start -->
-    <section class="pb-8">
-        <div class="container">
-            <h4 class="w-full lg:w-1/2 section_title pb-6 colored">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            </h4>
-            <div class="row items-center mb-8 odd:flex-row-reverse odd:text-right">
-                <div class="w-full md:w-1/2">
-                    <div class="pb-5">
-                        <div class="relative pl-5 inner_text before_line">
-                            <p>
-                                Azsafety Production today provides complete array of Marine safety equipments and services. We have excellent business
-                                relationships with our clients from reputed oil and gas industries and have experienced considerable growth, over the
-                                last
-                                couple of years, mainly acquisitions. Through our experience and knowledge of industry we maintain the supply and
-                                service
-                                of safety equipments, and other required services in marine industry.
-                            </p>
-                            <p>
-                                Cooperation with world’s leading suppliers in the industry, and the knowledge of local legislation and business
-                                procedures
-                                gives us considerable competitive advantage in the Caspian region. We aim at standardizing processes and aligning
-                                product
-                                ranges and services at the highest possible quality, in order to live up to your expectations, when do business with
-                                Azsafety Production.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w-full md:w-1/2">
-                    <div class="w-full">
-                        <img src="./assets/images/about/why_us.png" class="w-full" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="row items-center mb-8 odd:flex-row-reverse odd:text-right">
-                <div class="w-full md:w-1/2">
-                    <div class="pb-5">
-                        <div class="relative pl-5 inner_text before_line after">
-                            <p>
-                                We are capable to server our customers through our extended network, thus ensures precise delivery of all the
-                                supplies, equipments and services you need in the whole region. The dexterous team of professionals, who hold in depth
-                                knowledge in this domain is available 24/7 to maintain the fastest and efficient services. Every tast carried out,
-                                every decision taken, is deeply embedded in the values and business conduct of our company.
-                                Our commercial success is based on the ability to work hand-in-hand with our customers and achieving their confidence
-                                and trust. Finally we are committed to deliver our services in the most secure and environmental friendly way.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w-full md:w-1/2">
-                    <div class="w-full">
-                        <img src="./assets/images/about/why_2.png" class="w-full" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="row items-center">
-                <div class="w-full">
-                    <div class="relative bg_section">
-                        <div class="overlay"></div>
-                        <div class="relative z-10 container">
-                            <ul class="flex items-center justify-around">
-                                <li class="text-white">
-                                    <p class="text-2xl md:text-4xl lg:text-5xl font-medium">200+</p>
-                                    <p class="text-sm lg:text-xl">Məmnun müştəri</p>
-                                </li>
-                                <li class="text-white">
-                                    <p class="text-2xl md:text-4xl lg:text-5xl font-medium">50+</p>
-                                    <p class="text-sm lg:text-xl">Avadanlıq</p>
-                                </li>
-                                <li class="text-white">
-                                    <p class="text-2xl md:text-4xl lg:text-5xl font-medium">100%</p>
-                                    <p class="text-sm lg:text-xl">Zəmanət</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Why us end -->
 </main>
-
 <!-- Footer start -->
 <footer>
     <div class="bg-[#F0F3F6] px-4 pt-11">
