products page completed

--- a/products.html
+++ b/products.html
@@ -50,7 +50,7 @@
                     </li>
                 </ul>
                 <div class="pl-3">
-                    <form action="">
+                    <form action="" class="m-0">
                         <div class="relative flex-1">
                             <label>
                                 <input type="text" class="form_control" placeholder="Axtar">
@@ -132,7 +132,7 @@
     <!-- Breadcrumb start -->
     <div class="py-9">
         <div class="container">
-            <h3 class="text-2xl text-[#303030]">Haqqımızda</h3>
+            <h3 class="text-2xl text-[#303030]">Məhsullar</h3>
             <ul class="flex items-center text-sm text-[#AEAEAE] pt-5">
                 <li>
                     <a href="./index.html">
@@ -143,12 +143,211 @@
                     <span class="mdi mdi-chevron-right"></span>
                 </li>
                 <li>
-                    Services
+                    Məhsullar
                 </li>
             </ul>
         </div>
     </div>
     <!-- Breadcrumb end -->
+
+    <section class="pb-8">
+        <div class="container">
+            <form action="" class="m-0">
+                <div class="flex flex-wrap items-center mb-5">
+                    <div class="mb-3">
+                        <label for="category">
+                            <select name="category" id="category" class="form_select">
+                                <option value="all">Kateqoriya</option>
+                                <option value="1">Kateqoriya 1</option>
+                                <option value="2">Kateqoriya 2</option>
+                            </select>
+                        </label>
+                    </div>
+                    <div class="mb-3">
+                        <label for="popularity">
+                            <select name="popularity" id="popularity" class="form_select">
+                                <option value="all">Populyarlığına görə</option>
+                            </select>
+                        </label>
+                    </div>
+                    <div class="mb-3">
+                        <label for="new">
+                            <select name="new" id="new" class="form_select">
+                                <option value="new">Yeni kolleksiya</option>
+                            </select>
+                        </label>
+                    </div>
+                </div>
+            </form>
+            <div class="row">
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-8">
+                    <div class="product_card group">
+                        <span class="p_badge">
+                            Yeni
+                        </span>
+                        <div class="max-w-[182px] mx-auto py-3">
+                            <a href="./product.html" class="block w-full">
+                                <img src="./assets/images/products/product.png"
+                                     class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                     alt="">
+                            </a>
+                        </div>
+                        <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
+                            SOLAS Inflatable Lifejacket-Child
+                        </a>
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-8">
+                    <div class="product_card group">
+                        <span class="p_badge">
+                            Yeni
+                        </span>
+                        <div class="max-w-[182px] mx-auto py-3">
+                            <a href="./product.html" class="block w-full">
+                                <img src="./assets/images/products/product_1.png"
+                                     class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                     alt="">
+                            </a>
+                        </div>
+                        <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
+                            SOLAS Inflatable Lifejacket-Child
+                        </a>
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-8">
+                    <div class="product_card group">
+                        <span class="p_badge">
+                            Yeni
+                        </span>
+                        <div class="max-w-[182px] mx-auto py-3">
+                            <a href="./product.html" class="block w-full">
+                                <img src="./assets/images/products/product_2.png"
+                                     class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                     alt="">
+                            </a>
+                        </div>
+                        <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
+                            SOLAS Inflatable Lifejacket-Child
+                        </a>
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-8">
+                    <div class="product_card group">
+                        <span class="p_badge">
+                            Yeni
+                        </span>
+                        <div class="max-w-[182px] mx-auto py-3">
+                            <a href="./product.html" class="block w-full">
+                                <img src="./assets/images/products/product_3.png"
+                                     class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                     alt="">
+                            </a>
+                        </div>
+                        <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
+                            SOLAS Inflatable Lifejacket-Child
+                        </a>
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-8">
+                    <div class="product_card group">
+                        <span class="p_badge">
+                            Yeni
+                        </span>
+                        <div class="max-w-[182px] mx-auto py-3">
+                            <a href="./product.html" class="block w-full">
+                                <img src="./assets/images/products/product_4.png"
+                                     class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                     alt="">
+                            </a>
+                        </div>
+                        <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
+                            SOLAS Inflatable Lifejacket-Child
+                        </a>
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-8">
+                    <div class="product_card group">
+                        <span class="p_badge">
+                            Yeni
+                        </span>
+                        <div class="max-w-[182px] mx-auto py-3">
+                            <a href="./product.html" class="block w-full">
+                                <img src="./assets/images/products/product_5.png"
+                                     class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                     alt="">
+                            </a>
+                        </div>
+                        <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
+                            SOLAS Inflatable Lifejacket-Child
+                        </a>
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-8">
+                    <div class="product_card group">
+                        <span class="p_badge">
+                            Yeni
+                        </span>
+                        <div class="max-w-[182px] mx-auto py-3">
+                            <a href="./product.html" class="block w-full">
+                                <img src="./assets/images/products/product_6.png"
+                                     class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                     alt="">
+                            </a>
+                        </div>
+                        <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
+                            SOLAS Inflatable Lifejacket-Child
+                        </a>
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-8">
+                    <div class="product_card group">
+                        <span class="p_badge">
+                            Yeni
+                        </span>
+                        <div class="max-w-[182px] mx-auto py-3">
+                            <a href="./product.html" class="block w-full">
+                                <img src="./assets/images/products/product_7.png"
+                                     class="w-full h-[200px] transition duration-500 group-hover:scale-110"
+                                     alt="">
+                            </a>
+                        </div>
+                        <a href="./product.html" class="text-lg text-center font-medium transition duration-500 group-hover:text-[#F58220]">
+                            SOLAS Inflatable Lifejacket-Child
+                        </a>
+                    </div>
+                </div>
+                <div class="w-full">
+                    <ul class="pagination_block">
+                        <li>
+                            <a href="#" class="pagination_link active">
+                                1
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="pagination_link">
+                                2
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="pagination_link">
+                                3
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="pagination_link">
+                                ...
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="pagination_link">
+                                9
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 <!-- Footer start -->
 <footer>
