--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </li>
                 </ul>
                 <div class="pl-3">
-                    <form action="">
+                    <form action="" class="m-0">
                         <div class="relative flex-1">
                             <label>
                                 <input type="text" class="form_control" placeholder="Axtar">
