--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@
                     </li>
                 </ul>
                 <div class="pl-3">
-                    <form action="">
+                    <form action="" class="m-0">
                         <div class="relative flex-1">
                             <label>
                                 <input type="text" class="form_control" placeholder="Axtar">
@@ -132,7 +132,9 @@
     <!-- Breadcrumb start -->
     <div class="py-9">
         <div class="container">
-            <h3 class="text-2xl text-[#303030]">Services</h3>
+            <h3 class="text-2xl text-[#303030]">
+                Xidmətlər
+            </h3>
             <ul class="flex items-center text-sm text-[#AEAEAE] pt-5">
                 <li>
                     <a href="./index.html">
@@ -143,7 +145,7 @@
                     <span class="mdi mdi-chevron-right"></span>
                 </li>
                 <li>
-                    Services
+                    Xidmətlər
                 </li>
             </ul>
         </div>
