contact page completed

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                     <form action="" class="m-0">
                         <div class="relative flex-1">
                             <label>
-                                <input type="text" class="form_control" placeholder="Axtar">
+                                <input type="text" class="form_control search" placeholder="Axtar">
                             </label>
                             <button class="text-lg text-white absolute top-[12%] right-[5px]">
                                 <span class="mdi mdi-magnify"></span>
@@ -134,14 +134,14 @@
     <div class="py-9">
         <div class="container">
             <h3 class="text-2xl text-[#303030]">Haqqımızda</h3>
-            <ul class="flex items-center text-sm text-[#AEAEAE] pt-5">
+            <ul class="breadcrumb">
                 <li>
                     <a href="./index.html">
                         Ana səhifə
                     </a>
                 </li>
                 <li>
-                    <span class="mdi mdi-chevron-right"></span>
+                    <span class="mdi mdi-chevron-right text-lg"></span>
                 </li>
                 <li>
                     Haqqımızda
