--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <form action="" class="m-0">
                         <div class="relative flex-1">
                             <label>
-                                <input type="text" class="form_control" placeholder="Axtar">
+                                <input type="text" class="form_control search" placeholder="Axtar">
                             </label>
                             <button class="text-lg text-white absolute top-[12%] right-[5px]">
                                 <span class="mdi mdi-magnify"></span>
