--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,9 @@
+<!doctype html>
 <html lang="az">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Azsafety | Services</title>
+    <title>Azsafety | Products</title>
     <!-- Poppins font-family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -132,9 +133,7 @@
     <!-- Breadcrumb start -->
     <div class="py-9">
         <div class="container">
-            <h3 class="text-2xl text-[#303030]">
-                Xidmətlər
-            </h3>
+            <h3 class="text-2xl text-[#303030]">Əlaqə</h3>
             <ul class="breadcrumb">
                 <li>
                     <a href="./index.html">
@@ -145,148 +144,90 @@
                     <span class="mdi mdi-chevron-right text-lg"></span>
                 </li>
                 <li>
-                    Xidmətlər
+                    Əlaqə
                 </li>
             </ul>
         </div>
     </div>
     <!-- Breadcrumb end -->
 
-    <section class="pb-9">
+    <section class="pb-8">
         <div class="container">
-            <div class="row">
-                <div class="w-full md:w-1/2 lg:w-1/4 even:mt-9 mb-9">
-                    <div class="service_card">
-                        <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
-                            <img src="./assets/images/icons/service_1.svg" alt="">
-                        </div>
-                        <div class="my-5">
-                            <div class="relative small_title black after pt-16">
-                                liferats
-                            </div>
-                            <p class="text-xs leading-5 pt-4">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s.
-                            </p>
-                        </div>
-                    </div>
+            <div class="row items-center">
+                <div class="w-full lg:w-1/3">
+                    <h5 class="section_title mb-5">
+                        AzSafety
+                    </h5>
+                    <ul class="text-2xl">
+                        <li class="flex items-center gap-2 mb-3">
+                            <span class="mdi mdi-map-marker text-main"></span>
+                            <span class="text-base">Bakı şəh., Nəsimi ray., 11A</span>
+                        </li>
+                        <li class="flex items-center gap-2 mb-3">
+                            <span class="mdi mdi-phone text-main"></span>
+                            <span class="text-base">+994 50 211 00 66</span>
+                        </li>
+                        <li class="flex items-center gap-2 mb-3">
+                            <span class="mdi mdi-email text-main"></span>
+                            <span class="text-base">info@azsafety.az</span>
+                        </li>
+                    </ul>
                 </div>
-                <div class="w-full md:w-1/2 lg:w-1/4 even:mt-9 mb-9">
-                    <div class="service_card">
-                        <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
-                            <img src="./assets/images/icons/service_2.svg" alt="">
-                        </div>
-                        <div class="my-5">
-                            <div class="relative small_title black after pt-16">
-                                Personal protective equipments
-                            </div>
-                            <p class="text-xs leading-5 pt-4">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w-full md:w-1/2 lg:w-1/4 even:mt-9 mb-9">
-                    <div class="service_card">
-                        <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
-                            <img src="./assets/images/icons/service_3.svg" alt="">
-                        </div>
-                        <div class="my-5">
-                            <div class="relative small_title black after pt-16">
-                                Marine Fire
-                            </div>
-                            <p class="text-xs leading-5 pt-4">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w-full md:w-1/2 lg:w-1/4 even:mt-9 mb-9">
-                    <div class="service_card">
-                        <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
-                            <img src="./assets/images/icons/service_4.svg" alt="">
-                        </div>
-                        <div class="my-5">
-                            <div class="relative small_title black after pt-16">
-                                Boats&Davits
-                            </div>
-                            <p class="text-xs leading-5 pt-4">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w-full md:w-1/2 lg:w-1/4 even:mt-9 mb-9">
-                    <div class="service_card">
-                        <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
-                            <img src="./assets/images/icons/service_5.svg" alt="">
-                        </div>
-                        <div class="my-5">
-                            <div class="relative small_title black after pt-16">
-                                Signals&Lights
-                            </div>
-                            <p class="text-xs leading-5 pt-4">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w-full md:w-1/2 lg:w-1/4 even:mt-9 mb-9">
-                    <div class="service_card">
-                        <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
-                            <img src="./assets/images/icons/service_6.svg" alt="">
-                        </div>
-                        <div class="my-5">
-                            <div class="relative small_title black after pt-16">
-                                Evacuation systems
-                            </div>
-                            <p class="text-xs leading-5 pt-4">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w-full md:w-1/2 lg:w-1/4 even:mt-9 mb-9">
-                    <div class="service_card">
-                        <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
-                            <img src="./assets/images/icons/service_7.svg" alt="">
-                        </div>
-                        <div class="my-5">
-                            <div class="relative small_title black after pt-16">
-                                Life saving appliances
-                            </div>
-                            <p class="text-xs leading-5 pt-4">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w-full md:w-1/2 lg:w-1/4 even:mt-9 mb-9">
-                    <div class="service_card">
-                        <div class="bg-[#F0F3F6] p-3 rounded-full w-20 h-20 flex items-center justify-center">
-                            <img src="./assets/images/icons/service_8.svg" alt="">
-                        </div>
-                        <div class="my-5">
-                            <div class="relative small_title black after pt-16">
-                                Accessories
-                            </div>
-                            <p class="text-xs leading-5 pt-4">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s.
-                            </p>
-                        </div>
-                    </div>
+                <div class="w-full lg:w-2/3">
+                    <iframe
+                            class="w-full"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d687.5559318231612!2d49.84103354222208!3d40.384561623815934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307da20173535b%3A0xe47892b4f8493f96!2sN%C9%99simi%20Rayon!5e1!3m2!1sen!2saz!4v1731401311881!5m2!1sen!2saz"
+                            height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
+            <div class="text-center py-8">
+                <h4 class="relative inline-block section_title line_after">
+                    Şikayət və təkliflər
+                </h4>
+            </div>
+            <form action="">
+                <div class="row">
+                    <div class="w-full md:w-1/2 mb-5">
+                        <label for="fullname">
+                            <input type="text" name="fullname" id="fullname" placeholder="Adınız, soyadınız" class="form_control">
+                        </label>
+                    </div>
+                    <div class="w-full md:w-1/2 mb-5">
+                        <label for="number">
+                            <input type="text" name="number" id="number" placeholder="Nömrə" class="form_control">
+                        </label>
+                    </div>
+                    <div class="w-full md:w-1/2 mb-5">
+                        <label for="email">
+                            <input type="email" name="email" id="email" placeholder="E-mailiniz" class="form_control">
+                        </label>
+                    </div>
+                    <div class="w-full md:w-1/2 mb-5">
+                        <label for="subject">
+                            <input type="text" name="subject" id="subject" placeholder="Başlıq" class="form_control">
+                        </label>
+                    </div>
+                    <div class="w-full mb-5">
+                        <label for="message">
+                            <textarea name="message"
+                                      id="message"
+                                      rows="10"
+                                      placeholder="Qeydiniz"
+                                      class="form_textarea"></textarea>
+                        </label>
+                    </div>
+                    <div class="w-full lg:w-1/2 ml-auto">
+                        <button class="btn_main">
+                            Göndər
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
     </section>
 </main>
+
 <!-- Footer start -->
 <footer>
     <div class="bg-[#F0F3F6] px-4 pt-11">
